# cognimaker

./: .gitignore  Makefile  Pipfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg
cognimaker/estimator/: __init__.py  _base.py  _base_classifier.py
cognimaker/evaluation/: classification.py  evaluator.py  metric.py  recommendation.py
cognimaker/model/: __init__.py  classification.py  model.py  prediction.py  recommendation.py
cognimaker/preprocessor/: __init__.py  _base.py
cognimaker/runner/: __init__.py  runner.py
cognimaker/runner/sagemaker/: __init__.py  install_entrypoint.py  sagemaker.py
cognimaker/runner/sagemaker/static_files/: entrypoint.py  nginx.conf  wsgi.py
cognimaker/util/: __init__.py  _encoder.py  _logger.py  const.py
docker/: Dockerfile.sample
docker/model/: model.py
static/: entrypoint.py  wsgi.py
tests/: Dockerfile  docker_run.sh  test_encoder.py  test_metric.py
tests/OLD__test_classifier/: OLDtest_classifier.py
tests/test_classifier/: parameter.json  test_classifier.py
tests/test_classifier/output_dir/: indicator.json
tests/test_estimator/: test_estimator.py
tests/test_estimator/input_dir/: test.csv
tests/test_model/: Dockerfile  docker_run.sh  dropout_predictor.py  preprocessor.py  test_model.py  退会者予測モデル検証.ipynb
tests/test_model/input/: Untitled.ipynb  parameter.json
tests/test_model/output/model/: model.txt
tests/tests_preprocessor/: test_data_ec.csv  test_preprocessor.py  test_preprocessor_ec.py
