[metadata]
name = cognimaker
version = attr: cognimaker.__version__
url = https://github.com/CogniroboCloud/cognimaker
author = COGNIROBO INC.
description = framework library for develop model on COGNIROBO Cloud Application
long_description = file: README.md
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
zip_safe = False
packages = find:
install_requires = 
    scikit-learn
include_package_data = True
