[metadata]
name = cognimaker
version = attr: cognimaker.__version__
url = https://github.com/CogniroboCloud/cognimaker
author = COGNIROBO INC.
description = framework library for develop model on COGNIROBO Cloud Application
long_description = file: README.md
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
zip_safe = False
packages = find:
install_requires = 
    scikit-learn
include_package_data = True

[flake8]
max-line-length = 88

[mypy]
warn_unused_configs = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pyspark.*]
ignore_missing_imports = True

[mypy-boto3.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True
